--- a/index.html
+++ b/index.html
@@ -10,6 +10,84 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <header>
+      <nav class="navbar navbar-default text-center">
+          <div class="container-fluid">
+               <div class="navbar-header">
+                  <a class="navbar-brand logo border-box" href="index.html"><i class="fa fa-globe fa-5x" aria-hidden="true"></i>PlanetAwareness</a>
+                </div>
+                <ul class="nav-list">
+                   <li class="listed-nav_item"><a href="index.html"><i class="fa fa-home fa-fw" aria-hidden="true"></i>Home</a></li>
+                   <li class="listed-nav_item"><a href="about.html"><i class="fa fa-question-circle-o fa-fw" aria-hidden="true"></i>About</a></li>
+                   <li class="listed-nav_item"><a href="contact.html"><i class="fa fa-envelope-o fa-fw" aria-hidden="true"></i>Contact</a></li>
+                   <li class="listed-nav_item"><a href="https://www.worldwildlife.org/"><i class="fa fa-leaf fa-fw" aria-hidden="true"></i>Take Action</a></li>
+                </ul>
+           </div>
+        </nav>
+  </header>
+    <!--NAVIGATION ENDS-->
+
+    <!--HERO SECTION BEGINS-->
+
+  <div class="hero text-center">
+      <h1>Nature. Life.</h1>
+      <h1 class="blockquote">We are using resources as if we had two planets, not one. There can be no 'plan B' because there is no 'planet B.' - Ban Ki-moon</h1>
+  </div>
+
+    <!--HERO SECTION ENDS-->
+
+    <!--INBETWEEN SECTION BEGINS-->
+
+  <h3 class="text-center text-middle">
+      The current problems we are facing are very real.<br> There is still time to make a difference. One small step at a time.
+  </h3>
+    <!--INBETWEEN SECTION ENDS-->
+
+
+    <!-- CIRCLE SECTION BEGINS-->
+  <div class="circle-container circles">
+      <div class="circle-info deforestation">
+          <h2>Defores-tation</h2>
+      </div>
+      <div class="circle-info climate">
+          <h2>Climate Change</h2>
+      </div>
+      <div class="circle-info loss">
+          <h2>Loss of Biodiversity</h2>
+      </div>
+      <div class="circle-info water">
+          <h2>Water Pollution</h2>
+      </div>
+      <div class="circle-info air">
+          <h2>Air Pollution</h2>
+      </div>
+      <div class="circle-info center">
+          <h1>Concerns</h1>
+      </div>
+      <div class="circle-info overpop">
+          <h2>Over-population</h2>
+      </div>
+  </div>
+    <!-- CIRCLE SECTION ENDS-->
+
+  <h3 class="text-center under-circle">
+      What will you do to make a difference?
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi eleifend mollis tortor ut consequat. Nam id diam congue, gravida metus id, dictum nulla. Nam consequat diam vel eros venenatis suscipit. In vitae molestie lacus. Integer mauris odio, lobortis sed nisl vel, sagittis commodo tellus. Donec condimentum est nec lacus egestas bibendum eu consequat orci. Quisque mollis dignissim elementum. In id quam et eros sollicitudin laoreet. Sed vel euismod neque. In lobortis fringilla enim, eget aliquet turpis tempus nec.</p>
+  </h3>
+
+
+    <!-- FOOTER BEGINS -->
+  <footer class="text-center grey-color">
+      <div class="social">                    <!--INSERT SOCIAL MEDIA ICONS HERE-->
+          <a href="https://www.facebook.com/"><i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i></a>
+          <a href="https://www.twitter.com/"><i class="fa fa-twitter-square fa-2x" aria-hidden="true"></i></a>
+          <a href="https://www.instagram.com/"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a>
+      </div>
+      <div>
+          <p class="copyright text-center"> &copy;Yesenia Cardenas. All rights reserved.</p>
+      </div>
+  </footer>
+    <!-- FOOTER ENDS -->
 
 
 
